# phyfob_firmware

./: .gitignore  CMakeLists.txt  README.md  debugging copy.conf  debugging.conf  prj.conf
boards/arm/phyphox-keyfob/: Kconfig  Kconfig.board  Kconfig.defconfig  phyphox-keyfob.overlay  phyphox_keyfob.dts  phyphox_keyfob.yaml  phyphox_keyfob_defconfig
child_image/: mcuboot.conf
src/: bas.c  bas.h  ble.c  ble.h  bmi3.c  bmiZephyr.c  bmpZephyr.c  bmpZephyr.h  bmv080.h  bmv080Zephyr.c  bmv080Zephyr.h  bmv080_defs.h  event.c  event.h  hdc.c  hdc.h  lsm6dsr.c  lsm6dsr.h  lsm6dsr_reg.c  lsm6dsr_reg.h  main.c  sensirion_i2c_hal.c  sensirion_i2c_hal.h  sensors.h  stcc4Zephyr.c  stcc4Zephyr.h  stcc4_i2c.c
